--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 # Haskell Course
 
 https://github.com/system-f/fp-course
+
+# References
+* Galois, Inc. Tech: Teaching Haskell in the Real World, https://www.youtube.com/watch?v=AVqApGBlx5k
