--- a/README
+++ b/README
@@ -5,3 +5,4 @@ https://github.com/system-f/fp-course
 # References
 * Galois, Inc. Tech: Teaching Haskell in the Real World, https://www.youtube.com/watch?v=AVqApGBlx5k
 * https://www.seas.upenn.edu/~cis194/fall16/
+* Get Programming With Haskell - Manning
